# proto

./: .gitattributes  .gitignore  .protolock  .prototools  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTISM.md  LICENSE  README.md  depot.json  dist-workspace.toml  justfile  rust-toolchain.toml  version
asdf-plugin/: Cargo.toml
asdf-plugin/src/: asdf_plugin.rs  lib.rs
crates/asdf-plugin/: Cargo.toml
crates/asdf-plugin/src/: lib.rs
crates/bun/: Cargo.toml  README.md
crates/bun/src/: detect.rs  download.rs  execute.rs  install.rs  lib.rs  platform.rs  resolve.rs  shim.rs  verify.rs
crates/bun/tests/: bun_test.rs
crates/cli/: Cargo.toml
crates/cli-shim/: Cargo.toml  README.md  RESULTS.md
crates/cli-shim/src/: main.rs
crates/cli/src/: app.rs  bin.rs  config.rs  error.rs  helpers.rs  lib.rs  main.rs  main_shim.rs  manifest.rs  printer.rs  session.rs  shared.rs  shell.rs  states.rs  systems.rs  telemetry.rs  tools.rs
crates/cli/tests/: activate_test.rs  activate_windows_test.rs  add_plugin_test.rs  alias_test.rs  bin_test.rs  clean_test.rs  exec_test.rs  general_test.rs  global_test.rs  install_all_lockfile_test.rs  install_all_test.rs  install_global_test.rs  install_lang_test.rs  install_lockfile_test.rs  install_one_backend_test.rs  install_one_lockfile_test.rs  install_one_test.rs  install_uninstall_test.rs  list_remote_test.rs  list_test.rs  local_test.rs  outdated_test.rs  pin_test.rs  plugin_add_test.rs  plugin_list_test.rs  plugin_remove_test.rs  plugin_search_test.rs  plugins_test  plugins_test.rs  regen_test.rs  remove_plugin_test.rs  run_lang_test.rs  run_test.rs  shim_test.rs  status_test.rs  tool_add_test.rs  tool_plugins_test.rs  tool_remove_test.rs  unalias_test.rs  uninstall_lockfile_test.rs  (+6 more)
crates/codegen/: Cargo.toml
crates/codegen/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  config_error.rs  config_manager.rs  describer.rs  detector.rs  downloader.rs  env.rs  env_error.rs  error.rs  errors.rs  events.rs  executor.rs  file_manager.rs  helpers.rs  host_funcs.rs  id.rs  installer.rs  lib.rs  loader.rs  loader_error.rs  lockfile.rs  manifest.rs  plugin.rs  proto.rs  proto_config.rs  proto_error.rs  reporter.rs  resolver.rs  shim_registry.rs  shimmer.rs  test_utils.rs  tool.rs  tool_context.rs  tool_error.rs  tool_loader.rs  tool_lockfile.rs  tool_manifest.rs  tool_spec.rs  tools_config.rs  user_config.rs  (+4 more)
crates/core/templates/: bash.tpl  bash_global.tpl  bash_header.tpl  bash_local.tpl  batch.tpl  cmd_global.tpl  pwsh.tpl  pwsh_global.tpl  pwsh_header.tpl  pwsh_local.tpl
crates/core/tests/: bin_manager_test.rs  config_test.rs  detector_test.rs  file_manager_test.rs  linker_test.rs  locator_test.rs  locker_test.rs  lockfile_test.rs  plugin_test.rs  proto_config_test.rs  resolver_test.rs  shim_registry_test.rs  shimmer_test.rs  tool_context_test.rs  tool_loader_test.rs  tool_spec.rs  tools_config_test.rs  user_config_test.rs  version_detector_test  version_detector_test.rs  version_manifest_test.rs  version_resolver_test.rs  version_test.rs
crates/core2/: Cargo.toml
crates/core2/src/: detector.rs  error.rs  helpers.rs  lib.rs  manifest.rs  shimmer.rs  tool.rs  tool_manifest.rs  tools_config.rs  user_config.rs  version.rs  version_detector.rs  version_resolver.rs
crates/core2/templates/: bash_local.tpl  cmd_global.tpl  cmd_header.tpl
crates/core2/tests/: shimmer_test.rs  tools_config_test.rs  user_config_test.rs  version_resolver_test.rs  version_test.rs
crates/deno/: Cargo.toml  README.md
crates/deno/src/: detect.rs  download.rs  execute.rs  install.rs  lib.rs  platform.rs  resolve.rs  shim.rs  verify.rs
crates/deno/tests/: deno_test.rs
crates/go/: Cargo.toml  README.md
crates/go/src/: detect.rs  download.rs  execute.rs  lib.rs  resolve.rs  shim.rs  verify.rs
crates/go/tests/: go_test.rs
crates/id-spec/: Cargo.toml  README.md
crates/id-spec/src/: id.rs  id_macros.rs  lib.rs
crates/installer/: Cargo.toml
crates/installer/src/: error.rs  lib.rs  unix.rs  windows.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: detect.rs  download.rs  execute.rs  lib.rs  platform.rs  resolve.rs  shim.rs  verify.rs
crates/node/tests/: node_depman_test.rs  node_test.rs
crates/pdk/: Cargo.toml
crates/pdk-api/: Cargo.toml
crates/pdk-api/src/: api.rs  api_deprecated.rs  codegen.rs  error.rs  hooks.rs  host.rs  host_funcs.rs  lib.rs  shapes.rs
crates/pdk-api/tests/: checksum_test.rs
crates/pdk-test-utils/: Cargo.toml
crates/pdk-test-utils/src/: config_builder.rs  lib.rs  macros.rs  sandbox.rs  wrapper.rs
crates/pdk/src/: api.rs  error.rs  helpers.rs  host.rs  lib.rs  macros.rs  tracing.rs
crates/rust/: Cargo.toml  README.md
crates/rust/src/: detect.rs  download.rs  execute.rs  install.rs  lib.rs  platform.rs  resolve.rs  shim.rs  verify.rs
crates/schema-plugin/: Cargo.toml  README.md
crates/schema-plugin/src/: detect.rs  download.rs  execute.rs  install.rs  lib.rs  resolve.rs  schema.rs  shim.rs  verify.rs
crates/schema-plugin/tests/: schema_test.rs
crates/shim/: Cargo.toml
crates/shim/src/: lib.rs  unix.rs  windows.rs
crates/system-env/: Cargo.toml  README.md
crates/system-env/src/: deps.rs  env.rs  error.rs  helpers.rs  lib.rs  pm.rs  pm_vendor.rs  system.rs
crates/system-env/tests/: pm_test.rs
crates/system-packages/: API.md  Cargo.toml  README.md
crates/system-packages/src/: deps.rs  env.rs  lib.rs  pm.rs  pm_vendor.rs
crates/system-packages/tests/: pm_test.rs
crates/version-spec/: Cargo.toml  README.md
crates/version-spec/src/: lib.rs  resolved_spec.rs  spec_error.rs  unresolved_parse.rs  unresolved_parser.rs  (+2 more)
crates/warpgate/: Cargo.toml  README.md
crates/warpgate-api/: Cargo.toml  README.md
crates/warpgate-pdk/: Cargo.toml  README.md
crates/warpgate-registry/: Cargo.toml
crates/wasm-plugin/: Cargo.toml  README.md
plugins/: Cargo.toml
plugins/api-usage/: Cargo.toml
plugins/mocked-tool/: Cargo.toml
plugins/node/: Cargo.toml
plugins/protostar/: Cargo.toml
plugins/test/: Cargo.toml
plugins/wasm-test/: Cargo.toml  README.md
(+491 files in other folders)
