[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/cli"]

[workspace.dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
clap = "4.5.56"
clap_complete = "4.5.65"
compact_str = { version = "0.9.0", default-features = false, features = [
    "serde",
] }
derive_setters = "0.1.9"
dirs = "6.0.0"
extism = ">=1.6.0" # Lower for consumers
extism-pdk = "1.4.1"
http-cache-reqwest = "1.0.0-alpha.4"
human-sort = "0.2.2"
indexmap = "2.13.0"
iocraft = "0.7.17"
# iocraft = { git = "https://github.com/ccbrown/iocraft.git", branch = "main" }
miette = "7.6.0"
oci-client = "0.16.0"
once_cell = "1.21.3"
docker_credential = { version = "1.3.2" }
regex = { version = "1.12.2", default-features = false, features = ["std"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "charset",
    "http2",
    # We don't use openssl but its required for musl builds
    "native-tls-vendored",
] }
reqwest-middleware = { version = "0.5.0", default-features = false, features = [
    "charset",
    "http2",
] }
rmcp = { version = "0.14.0", default-features = false, features = [
    "base64",
    "macros",
] }
rustc-hash = "2.1.1"
scc = "3.5.2"
schemars = "1.2.0"
schematic = { version = "0.19.4", default-features = false }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.49", features = ["preserve_order"] }
sha2 = "0.10.9"
shell-words = "1.1.1"
starbase = { version = "0.10.9" }
starbase_archive = { version = "0.12.3", features = [
    "gz",
    "miette",
    "tar-all",
    "zip-all",
] }
starbase_console = { version = "0.6.22", features = ["miette", "ui"] }
starbase_id = { version = "0.3.2", features = ["miette", "schematic"] }
starbase_sandbox = { version = "0.10.4" }
starbase_shell = { version = "0.10.7", features = ["miette"] }
starbase_styles = { version = "0.6.6" }
starbase_utils = { version = "0.12.6", default-features = false, features = [
    "json",
    "miette",
    "net",
    "toml",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
toml_edit = "0.23.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false }
uuid = { version = "1.20.0", features = ["v4"] }
