[package]
name = "asdf-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
proto_pdk = { path = "../../crates/pdk" }
extism-pdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
tokio = { workspace = true }