[workspace]
resolver = "3"
members = ["api-usage", "mocked-tool"]

[workspace.dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
starbase_utils = { version = "0.12.0", default-features = false }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
