[workspace]
resolver = "3"
members = ["api-usage", "mocked-tool"]

[workspace.dependencies]
extism-pdk = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
starbase_utils = { version = "0.13.2", default-features = false }
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1.44"
