[package]
name = "proto_bun"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Bun support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.8.0", path = "../core" }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_utils = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
tokio = { workspace = true }
