[package]
name = "proto_cli_shim"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "proto-shim"
path = "src/main.rs"

[dependencies]
ctrlc = "3.4.1"
serde = { workspace = true }
serde_json = { workspace = true }
shared_child = "1.0.0"
sigpipe = "0.1.3"
starbase = { workspace = true }
