[package]
name = "proto_cli"
version = "0.51.3"
edition = "2024"
license = "MIT"
description = "A multi-language version manager, a unified toolchain."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"
keywords = [
    "language",
    "installer",
    "version-manager",
    "dependency-manager",
    "package-manager",
]
categories = ["development-tools"]
readme = "../../README.md"
default-run = "proto"

[package.metadata.release]
pre-release-replacements = [
    { file = "../../version", search = "^(.+)$", replace = "{{version}}" },
    { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[[bin]]
name = "proto"
path = "src/main.rs"

[[bin]]
name = "proto-shim"
path = "src/main_shim.rs"

[dependencies]
proto_core = { version = "0.51.3", path = "../core", features = ["clap"] }
proto_pdk_api = { version = "0.29.0", path = "../pdk-api" }
proto_shim = { version = "0.7.5", path = "../shim" }
system_env = { version = "0.8.1", path = "../system-env" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.41"
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
clap_complete_nushell = "4.5.8"
dirs = { workspace = true }
indexmap = { workspace = true }
iocraft = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
rustc-hash = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
shell-words = { workspace = true }
starbase = { workspace = true }
starbase_console = { workspace = true }
starbase_shell = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
sysinfo = { version = "0.36.0", default-features = false, features = [
    "system",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# For the shim binary
rust_json = "0.1.6"
sigpipe = "0.1.3"

# For extism/wastime
extism = "1.12.0"
wasmtime = "~30.0.2"
wasi-common = "~30.0.2"
wiggle = "~30.0.2"

[dev-dependencies]
starbase_sandbox = { workspace = true }
shared_child = "1.1.1"

[target."cfg(windows)".dependencies]
winreg = { version = "0.55.0", default-features = false }
