[package]
name = "proto_cli"
version = "0.53.2"
edition = "2024"
license = "MIT"
description = "A multi-language version manager, a unified toolchain."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"
keywords = [
    "language",
    "installer",
    "version-manager",
    "dependency-manager",
    "package-manager",
]
categories = ["development-tools"]
readme = "../../README.md"
default-run = "proto"
rust-version = "1.89.0"

[package.metadata.release]
pre-release-replacements = [
    { file = "../../version", search = "^(.+)$", replace = "{{version}}" },
    { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[[bin]]
name = "proto"
path = "src/main.rs"

[[bin]]
name = "proto-shim"
path = "src/main_shim.rs"

[dependencies]
proto_core = { version = "0.53.3", path = "../core", features = ["clap"] }
proto_pdk_api = { version = "0.31.2", path = "../pdk-api" }
proto_shim = { version = "0.7.9", path = "../shim" }
system_env = { version = "0.8.3", path = "../system-env" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.42"
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
clap_complete_nushell = "4.5.8"
dirs = { workspace = true }
indexmap = { workspace = true }
iocraft = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
rustc-hash = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
shell-words = { workspace = true }
starbase = { workspace = true }
starbase_console = { workspace = true }
starbase_shell = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
sysinfo = { version = "0.37.1", default-features = false, features = [
    "system",
] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# For the shim binary
rust_json = "0.1.6"
sigpipe = "0.1.3"

# For extism/wastime
extism = "1.12.0"
wasmtime = "~30.0.2"
wasi-common = "~30.0.2"
wiggle = "~30.0.2"

# Overrides
liblzma = { version = "0.4.5", features = ["static"] }

[dev-dependencies]
starbase_sandbox = { workspace = true }
shared_child = "1.1.1"

[target."cfg(windows)".dependencies]
winreg = { version = "0.55.0", default-features = false }

[features]
default = []
test-plugins = ["proto_core/test-plugins"]
