[package]
name = "proto_core"
version = "0.44.6"
edition = "2021"
license = "MIT"
description = "Core proto APIs."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_pdk_api = { version = "0.24.5", path = "../pdk-api", features = [
    "schematic",
] }
proto_shim = { version = "0.5.0", path = "../shim" }
version_spec = { version = "0.7.1", path = "../version-spec", features = [
    "schematic",
] }
warpgate = { version = "0.20.3", path = "../warpgate", features = [
    "schematic",
] }
clap = { workspace = true, optional = true }
convert_case = "0.6.0"
dotenvy = "0.15.7"
indexmap = { workspace = true }
miette = { workspace = true }
minisign-verify = "0.2.3"
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
    "config",
    "env",
    "toml",
    "type_indexmap",
    "type_url",
    "validate",
] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shell-words = { workspace = true }
starbase_archive = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true, features = ["fs-lock", "yaml"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { version = "2.5.4", features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = []
clap = ["dep:clap"]
