[package]
name = "proto_core2"
version = "0.13.1"
edition = "2021"
license = "MIT"
description = "Core proto APIs for languages to implement."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_pdk_api = { version = "0.3.1", path = "../pdk-api" }
warpgate = { version = "0.2.0", path = "../warpgate" }
cached = { workspace = true }
extism = { workspace = true }
fs4 = { version = "0.6.6", features = ["sync"] }
miette = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
