[package]
name = "proto_deno"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Deno support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.2.1", path = "../core" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_fs = "1.0.10"
tokio = { workspace = true }
