[package]
name = "proto_deno"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Deno support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.5.0", path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
tokio = { workspace = true }
