[package]
name = "proto_go"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "Go support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.4.0", path = "../core" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
tokio = { workspace = true }
