[package]
name = "proto_go"
version = "0.11.1"
edition = "2021"
license = "MIT"
description = "DEPRECATED: Go support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"
keywords = ["deprecated"]

[dependencies]
proto_core = { version = "0.12.2", path = "../core" }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_utils = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
tokio = { workspace = true }
