[package]
name = "proto_installer"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Download and install proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
system_env = { version = "0.5.0", path = "../system-env" }
miette = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
starbase_archive = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
