[package]
name = "proto_installer"
version = "0.12.1"
edition = "2024"
license = "MIT"
description = "Download and install proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
system_env = { version = "0.8.0", path = "../system-env" }
miette = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
starbase_archive = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
