[package]
name = "proto_installer"
version = "0.13.2"
edition = "2024"
license = "MIT"
description = "DEPRECATED: Download and install proto."
keywords = ["deprecated"]
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
system_env = { version = "0.8.1", path = "../system-env" }
miette = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["stream"] }
starbase_archive = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
miette = ["dep:miette"]
