[package]
name = "proto_node"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Node.js support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.6.0", path = "../core" }
clean-path = "0.2.1"
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_utils = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
tokio = { workspace = true }
