[package]
name = "proto_node"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Node.js support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.9.0", path = "../core" }
clean-path = "0.2.1"
once_cell = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
tokio = { workspace = true }
