[package]
name = "proto_node"
version = "0.12.2"
edition = "2021"
license = "MIT"
description = "DEPRECATED: Node.js support for proto."
keywords = ["deprecated"]
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.13.1", path = "../core" }
clean-path = "0.2.1"
once_cell = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
tokio = { workspace = true }
