[package]
name = "proto_pdk_api"
version = "0.22.0"
edition = "2021"
license = "MIT"
description = "Core APIs for creating proto WASM plugins."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
system_env = { version = "0.5.0", path = "../system-env" }
version_spec = { version = "0.6.1", path = "../version-spec" }
warpgate_api = { version = "0.9.0", path = "../warpgate-api" }
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
	"schema",
	"schema_serde",
	"type_semver",
] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = [
	"system_env/schematic",
	"version_spec/schematic",
	"warpgate_api/schematic",
]

# Ensures everything still works with schematic
[dev-dependencies]
proto_pdk_api = { path = ".", features = ["schematic"] }
