[package]
name = "proto_pdk_test_utils"
version = "0.43.0"
edition = "2024"
license = "MIT"
description = "Utilities for testing proto WASM plugins."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"
rust-version = "1.89.0"

[dependencies]
proto_core = { version = "0.55.0", path = "../core" }
proto_pdk_api = { version = "0.31.6", path = "../pdk-api" }
warpgate = { version = "0.29.0", path = "../warpgate" }
extism = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }

[features]
default = []
schema = []
