[package]
name = "proto_pdk"
version = "0.29.0"
edition = "2024"
license = "MIT"
description = "A plugin development kit for creating proto WASM plugins."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_pdk_api = { version = "0.28.0", path = "../pdk-api" }
warpgate_pdk = { version = "0.14.0", path = "../warpgate-pdk" }
extism-pdk = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
