[package]
name = "proto_rust"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Rust support for proto."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.13.0", path = "../core" }
once_cell = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
